@@ -1,5 +1,16 @@
 #!/bin/bash
-export HB_ROOT=../../..
+#
+# build.sh
+#
+# $Id$
+# 
+# Build shell script build debugger on LINUX/GTK
+# 
+
+
+# Modify path to Harbour to your own needs
+export HB_ROOT=$HOME/Harbour/core-master
+#export HB_ROOT=../../..
 
 if [ "x$HB_ROOT" = x ]; then
 export HRB_BIN=/usr/local/bin
@@ -17,7 +28,9 @@ export HWGUI_LIBS="-lhwgui -lprocmisc -lhbxml -lhwgdebug"
 export HWGUI_INC=../../include
 export HWGUI_LIB=../../lib
 
-$HRB_BIN/harbour hwgdebug -n -i$HRB_INC -i$HWGUI_INC -w2
-#$HRB_BIN/harbour hwgdebug -n -i$HRB_INC -i$HWGUI_INC -w2 -d__HCEDIT__
-gcc hwgdebug.c -ohwgdebug -I $HRB_INC -L $HRB_LIB -L $HWGUI_LIB -Wl,--start-group $HWGUI_LIBS $HARBOUR_LIBS $SYSTEM_LIBS -Wl,--end-group `pkg-config --libs gtk+-2.0`
+$HRB_BIN/harbour hwgdebug -n -i$HRB_INC -i$HWGUI_INC -w2 -d__LINUX__ -d__GTK__
+#$HRB_BIN/harbour hwgdebug -n -i$HRB_INC -i$HWGUI_INC -w2 -d__LINUX__ -d__GTK__ -d__HCEDIT__ 
+gcc hwgdebug.c -ohwgdebug -I$HRB_INC -L$HRB_LIB -L$HWGUI_LIB -Wl,--start-group $HWGUI_LIBS $HARBOUR_LIBS $SYSTEM_LIBS -Wl,--end-group `pkg-config --libs gtk+-2.0`
 rm hwgdebug.c
+
+# ================== EOF of build.sh ==================
