@@ -4,7 +4,7 @@
 #
 # $Id$
 #
-# Scrips buildung HWGUI editor utility for LINUX/GTK
+# Script buildung HWGUI editor utility for LINUX/GTK
 #
 # Configure path to Harbour to your own needs
 #export HB_ROOT=../../..
@@ -27,9 +27,9 @@ export HWGUI_LIBS="-lhwgui -lprocmisc -lhbxml -lhwgdebug"
 export HWGUI_INC=../../include
 export HWGUI_LIB=../../lib
 
-$HRB_BIN/harbour editor -n -i$HRB_INC -i$HWGUI_INC -w2 2>bldh.log
-$HRB_BIN/harbour hcediext -n -i$HRB_INC -i$HWGUI_INC -w2 2>>bldh.log
-$HRB_BIN/harbour calc -n -i$HRB_INC -i$HWGUI_INC -w2 2>>bldh.log
+$HRB_BIN/harbour editor -n -i$HRB_INC -i$HWGUI_INC -w2 -d__LINUX__ -d__GTK__ 2>bldh.log
+$HRB_BIN/harbour hcediext -n -i$HRB_INC -i$HWGUI_INC -w2 -d__LINUX__ -d__GTK__ 2>>bldh.log
+$HRB_BIN/harbour calc -n -i$HRB_INC -i$HWGUI_INC -w2 -d__LINUX__ -d__GTK__ 2>>bldh.log
 
 gcc editor.c hcediext.c calc.c -oeditor -I $HRB_INC -I $HWGUI_INC -I ../../../source/gtk -DHWG_USE_POINTER_ITEM -L $HRB_LIB -L $HWGUI_LIB -Wl,--start-group $HWGUI_LIBS $HARBOUR_LIBS -Wl,--end-group `pkg-config --cflags gtk+-2.0` `pkg-config gtk+-2.0 --libs` $SYSTEM_LIBS >bld.log 2>bld.log
 
